--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ temp_gccflags.c
 StRoot/AMPT_resolution/.consign
 StRoot/AMPT_v3v2/.consign
 StRoot/AMPT_resolution/Centrality_C.so
+StRoot/AMPT_phi/.consign
