--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # a comment - this is ignored
 # ignore share lib
 .sl53_gcc432
-# ignore .consign, *.d, *.so, *.eps, all the log file and script in StRoot
+# ignore .consign, *.d, *.so, *.eps, *.swp, all the log file and script in StRoot
 StRoot/**/.consign
 StRoot/**/*.d
 StRoot/**/*.so
@@ -9,6 +9,7 @@ StRoot/**/*.eps
 StRoot/**/*.err
 StRoot/**/*.log
 StRoot/**/*.csh
+StRoot/**/*.swp
 # don't ignore StRoot/CombPiKP/run.csh
 !StRoot/CombPiKP/run.csh
 # ignore log file generate by carver
