--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ temp_gccflags.c
 StRoot/AMPT_resolution/.consign
 StRoot/AMPT_v3v2/.consign
 StRoot/AMPT_resolution/Centrality_C.so
+StRoot/AMPT_resolution/Centrality_C.d
 StRoot/AMPT_phi/.consign
