--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ StRoot/AMPT_v3v2/.consign
 StRoot/AMPT_resolution/Centrality_C.so
 StRoot/AMPT_resolution/Centrality_C.d
 StRoot/AMPT_phi/.consign
+StRoot/AMPT_resolution/*.eps
+Macro_Plotting/figures/*.eps
