--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@ temp_gccflags.c
 .sl64_gcc447/
 StRoot/AMPT_resolution/.consign
 StRoot/AMPT_v3v2/.consign
-StRoot/AMPT_resolution/Centrality_C.so
-StRoot/AMPT_resolution/Centrality_C.d
+StRoot/*/*.so
+StRoot/*/*.d
 StRoot/AMPT_phi/.consign
 StRoot/AMPT_resolution/*.eps
 Macro_Plotting/figures/*.eps
 StRoot/*/*.swp
+StRoot/AMPT_phi/figures/*.eps
